Fix up ticket forms border and fix up merge issue with double scroll container

--- a/src/component/submitTicket/SubmitTicket.sass
+++ b/src/component/submitTicket/SubmitTicket.sass
@@ -38,7 +38,7 @@
 }
 
 .ticketFormsFooter {
-  composes: u-borderTop u-marginHL from '../../styles/utils.scss';
+  composes: u-marginVM from '../../styles/utils.scss';
 }
 
 .ticketFormsFooterMobile {
